[package]
authors = ["tonyketcham <ketcham.dev@gmail.com>"]
edition = "2021"
name = "sketches"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"

[[example]]
name = "01-growing-circle"
path = "01-growing-circle.rs"

[[example]]
name = "02-schotter"
path = "02-schotter.rs"

[[example]]
name = "02-schotter-2"
path = "02-schotter-2.rs"
